# marimo_dev

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .rhiza.env  .rhiza.history  Makefile  README.md  copyright.txt  index.html  mkdocs.yml  pyproject.toml  requirements.txt  ruff.toml  start_marimo.sh
.devcontainer/: Dockerfile  Dockerfile.dockerignore  devcontainer.json  startup.sh
.github/: renovate.json  template.yml
.github/workflows/: docker.yml  maintain.yml  marimo.yml  pre-commit.yml  release.yml  rhiza_benchmarks.yml  rhiza_ci.yml  rhiza_dep_compat_test.yml  rhiza_deptry.yml  rhiza_license.yml  rhiza_marimo.yml  rhiza_pip_audit.yml  rhiza_release.yml  rhiza_security.yml  rhiza_semgrep.yml  rhiza_typecheck.yml  rhiza_validate.yml  structure.yml  sync.yml  test.yml
.rhiza/: history  mkdocs.yml  template.yml
.rhiza/make.d/: book.mk  docs.mk
.rhiza/tests/integration/: test_book_targets.py
apps/: minimal_enclosing_circle.html
book/marimo/notebooks/: minimal_enclosing_circle.py
docs/: BOOK.md  index.md  mkdocs.yml  notebook-minimal_enclosing_circle.md  notebook-rhiza.md  report-coverage.md  report-hypothesis.md  report-test.md
docs/api/: index.md
notebooks/: minimal enclosing circle.py  minimal_enclosing_circle.html  minimal_enclosing_circle.py
tests/: test_trivial.py
