[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marimo_dev"
version = "0.12.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cvxpy>=1.7.5",
    "marimo>=0.18.4",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pyyaml>=6.0",
]


[tool.hatch.build.targets.wheel]
packages = ["src/marimo_dev"]

[tool.deptry]
[tool.deptry.per_rule_ignores]
DEP002 = ["cvxpy", "pyyaml"]

[tool.deptry.package_module_name_map]
cvxpy = "cvxpy"
marimo = "marimo"
numpy = "numpy"
pandas = "pandas"
plotly = "plotly"
pyyaml = "yaml"

